Bug 974378 - Make webrtc.org OpenSL ES output code optional. Increase input buffers. r=jesup a=sylvestre